9/15 program function/purpose update

--- a/_notebooks/2023-09-14-1.1_1.4_Team_Test_Program_Function_and_Purpose.ipynb
+++ b/_notebooks/2023-09-14-1.1_1.4_Team_Test_Program_Function_and_Purpose.ipynb
@@ -182,7 +182,6 @@
     "for i in range(1, num + 1):\n",
     "    result *= i\n",
     "\n",
-    "\n",
     "print(result)"
    ]
   },
@@ -198,7 +197,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rawdata = input(\"Enter data values and get the 5 number summary (minimum, Q1, median, Q3, maximum) and mean!\")\n",
+    "# we can add SD if we want))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,6 +224,16 @@
    "metadata": {},
    "source": [
     "### Program with Purpose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ideas: physics with Fg calculator and stored values for Earth, moon, etc. + statistics (SD, mean, distribution, comparison, SEM, etc.)\n",
+    "# get more ideas"
    ]
   }
  ],
