9/15 program function/purpose update

--- a/_notebooks/2023-09-14-1.1_1.4_Team_Test_Program_Function_and_Purpose.ipynb
+++ b/_notebooks/2023-09-14-1.1_1.4_Team_Test_Program_Function_and_Purpose.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rawdata = input(\"Enter data values and get the 5 number summary (minimum, Q1, median, Q3, maximum) and mean!\")\n",
+    "# rawdata = input(\"Enter data values and get the 5 number summary (minimum, Q1, median, Q3, maximum) and mean!\")\n",
     "# we can add SD if we want))\n",
     "\n"
    ]
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "# ideas: physics with Fg calculator and stored values for Earth, moon, etc. + statistics (SD, mean, distribution, comparison, SEM, etc.)\n",
-    "# get more ideas"
+    "# get more ideas: maybe do something for other sciences like chemistry...? maybe stoich calculator and include lots of unit changes (molecules, moles, gasses + PV=nRT, etc.?)"
    ]
   }
  ],
