--- a/_notebooks/2023-09-14-Stats_Calculation.ipynb
+++ b/_notebooks/2023-09-14-Stats_Calculation.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Minimum amount of money movies made in box office is: 1\n",
+      "The Maximum amount of money movies made in box office is: 5\n",
+      "The Median of the amount of money movies made in box office is: 3\n",
+      "The Average amount of money movies made in box office is: 3.0\n",
+      "The Standard Deviation of the amount of money movies made in box office is: 1.4142135623730951\n"
+     ]
+    }
+   ],
    "source": [
-    "#Find average, max, min, median, sd\n",
-    "\n",
     "#calculating minimum and maximum\n",
     "n_num = [1, 2, 3, 4, 5]\n",
     "n = len(n_num)\n",
@@ -18,16 +28,6 @@
     "\n",
     "print(\"The Minimum amount of money movies made in box office is: \" + str(minimum))\n",
     "print(\"The Maximum amount of money movies made in box office is: \" + str(maximum))\n",
-    "\n",
-    "\n",
-    "#calculating mean\n",
-    "n_num = [1, 2, 3, 4, 5]\n",
-    "n = len(n_num)\n",
-    " \n",
-    "get_sum = sum(n_num)\n",
-    "mean = get_sum / n\n",
-    " \n",
-    "print(\"The Average amount of money movies made in box office is: \" + str(mean))\n",
     "\n",
     "#calculating median\n",
     "n_num = [1, 2, 3, 4, 5]\n",
@@ -41,7 +41,27 @@
     "else:\n",
     "    median = n_num[n//2]\n",
     "print(\"The Median of the amount of money movies made in box office is: \" + str(median))\n",
-    "\n"
+    "\n",
+    "#calculating mean\n",
+    "n_num = [1, 2, 3, 4, 5]\n",
+    "n = len(n_num)\n",
+    " \n",
+    "get_sum = sum(n_num)\n",
+    "mean = get_sum / n\n",
+    " \n",
+    "print(\"The Average amount of money movies made in box office is: \" + str(mean))\n",
+    "\n",
+    "#calculating standard deviation\n",
+    "n_num = [1, 2, 3, 4, 5]\n",
+    "n = len(n_num)\n",
+    "\n",
+    "get_sum = sum(n_num)\n",
+    "mean = get_sum / n\n",
+    "\n",
+    "variance = sum([((x - mean) ** 2) for x in n_num]) / n\n",
+    "sd = variance ** 0.5\n",
+    "\n",
+    "print(\"The Standard Deviation of the amount of money movies made in box office is: \" + str(sd))"
    ]
   }
  ],
