--- a/_notebooks/2023-09-14-Stats_Calculation.ipynb
+++ b/_notebooks/2023-09-14-Stats_Calculation.ipynb
@@ -2,54 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The least amount of money movies made in box office is: 369,345,583$\n",
+      "The most amount of money movies made in box office is: 2,320,250,281$\n",
+      "The Median of the amount of money movies made in box office is: 701,404,294.0$\n",
+      "The Average amount of money movies made in box office is: 814,269,158.6$\n",
+      "The Standard Deviation of the amount of money movies made in box office is: 486,049,002.6574319$\n"
+     ]
+    }
+   ],
    "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "#region Getting money stats\n",
+    "\n",
+    "# url being parsed\n",
+    "url = \"https://www.boxofficemojo.com/year/world/2022/\"\n",
+    "# list where money is going to be stored\n",
+    "test = []\n",
+    "# removing dollar symbol for formatting\n",
+    "char = '$'\n",
+    "# makes a request for the website \n",
+    "moviePage = requests.get(url)\n",
+    "# parses for all the content from web page\n",
+    "soup = BeautifulSoup(moviePage.content, 'html.parser')\n",
+    "# money is stored in specific tag, finds that specific tag\n",
+    "elements = soup.find_all('td', class_='a-text-right mojo-field-type-money')\n",
+    "\n",
+    "# searches through beautiful soup output and removes any undesired tags\n",
+    "for element in elements:\n",
+    "    test.append(element.get_text(strip=True))\n",
+    "\n",
+    "# gets rid of dollar symbol in list\n",
+    "for idx, ele in enumerate(test):\n",
+    "    test[idx] = ele.replace(char, '')\n",
+    "\n",
+    "x = 0\n",
+    "test = test[:20]\n",
+    "\n",
+    "for i in test:\n",
+    "\n",
+    "    i = i.replace(',','')\n",
+    "    test[x] = int(i)\n",
+    "    x+=1\n",
+    "n_num = test\n",
+    "#endregion\n",
+    "\n",
     "#calculating minimum and maximum\n",
-    "n_num = [1, 2, 3, 4, 5]\n",
     "n = len(n_num)\n",
     "n_num.sort()\n",
     "\n",
-    "minimum = n_num[0]\n",
-    "maximum = n_num[-1]\n",
+    "minimum = ('{:,}'.format(n_num[0]))\n",
+    "maximum = ('{:,}'.format(n_num[-1]))\n",
     "\n",
-    "print(\"The Minimum amount of money movies made in box office is: \" + str(minimum))\n",
-    "print(\"The Maximum amount of money movies made in box office is: \" + str(maximum))\n",
+    "print(\"The least amount of money movies made in box office is: \" + str(minimum)+ \"$\")\n",
+    "print(\"The most amount of money movies made in box office is: \" + str(maximum)+ \"$\")\n",
     "\n",
     "#calculating median\n",
-    "n_num = [1, 2, 3, 4, 5]\n",
     "n = len(n_num)\n",
     "n_num.sort()\n",
     " \n",
     "if n % 2 == 0:\n",
     "    median1 = n_num[n//2]\n",
     "    median2 = n_num[n//2 - 1]\n",
-    "    median = (median1 + median2)/2\n",
+    "    median = ('{:,}'.format((median1 + median2)/2))\n",
     "else:\n",
-    "    median = n_num[n//2]\n",
-    "print(\"The Median of the amount of money movies made in box office is: \" + str(median))\n",
+    "    median = ('{:,}'.format(n_num[n//2]))\n",
+    "print(\"The Median of the amount of money movies made in box office is: \" + str(median)+ \"$\")\n",
     "\n",
     "#calculating mean\n",
-    "n_num = [1, 2, 3, 4, 5]\n",
     "n = len(n_num)\n",
     " \n",
     "get_sum = sum(n_num)\n",
-    "mean = get_sum / n\n",
+    "mean = ('{:,}'.format(get_sum / n))\n",
     " \n",
-    "print(\"The Average amount of money movies made in box office is: \" + str(mean))\n",
+    "print(\"The Average amount of money movies made in box office is: \" + str(mean)+ \"$\")\n",
     "\n",
     "#calculating standard deviation\n",
-    "n_num = [1, 2, 3, 4, 5]\n",
     "n = len(n_num)\n",
     "\n",
     "get_sum = sum(n_num)\n",
     "mean = get_sum / n\n",
     "\n",
     "variance = sum([((x - mean) ** 2) for x in n_num]) / n\n",
-    "sd = variance ** 0.5\n",
+    "sd = ('{:,}'.format(variance ** 0.5))\n",
     "\n",
-    "print(\"The Standard Deviation of the amount of money movies made in box office is: \" + str(sd))"
+    "print(\"The Standard Deviation of the amount of money movies made in box office is: \" + str(sd) + \"$\")"
    ]
   }
  ],
