--- a/_notebooks/2023-09-14-Stats_Calculation.ipynb
+++ b/_notebooks/2023-09-14-Stats_Calculation.ipynb
@@ -48,7 +48,7 @@
     "test = test[:20]\n",
     "\n",
     "for i in test:\n",
-    "\n",
+    "#Formatting to convert list to integers\n",
     "    i = i.replace(',','')\n",
     "    test[x] = int(i)\n",
     "    x+=1\n",
