--- a/_notebooks/2023-09-14-1.1_1.4_Team_Test_Program_Function_and_Purpose.ipynb
+++ b/_notebooks/2023-09-14-1.1_1.4_Team_Test_Program_Function_and_Purpose.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,7 @@
      "output_type": "stream",
      "text": [
       "Program with Input and Output\n",
+      "What is your name?e\n",
       "Hello e, welcome to this page!\n"
      ]
     }
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,8 @@
      "output_type": "stream",
      "text": [
       "Program with Iteration\n",
-      "362880\n"
+      "Input an integer and get its factorial!5\n",
+      "120\n"
      ]
     }
    ],
@@ -194,9 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 3 = 5\n",
+      "3 + 5 = 8\n",
+      "9 - 6 = 3\n",
+      "7 - 2 = 5\n"
+     ]
+    }
+   ],
    "source": [
     "# rawdata = input(\"Enter data values and get the 5 number summary (minimum, Q1, median, Q3, maximum) and mean!\")\n",
     "# we can add SD if we want))\n",
@@ -204,7 +217,7 @@
     "def add(a, b):\n",
     "    return int(a) + int(b)\n",
     "\n",
-    "def subract(a, b):\n",
+    "def subtract(a, b):\n",
     "    return int(a) - int(b)\n",
     "\n",
     "print(\"2 + 3 = \" + str(add(2, 3)))\n",
@@ -222,15 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input a character -2\n",
-      "You inputted a float\n"
+      "Input a character e\n",
+      "You inputted a character\n"
      ]
     }
    ],
@@ -279,7 +292,12 @@
     "    \"Ne\": 20.180,\n",
     "    \"Na\": 22.990,\n",
     "    \"Mg\": 24.305,\n",
-    "    \"Al\": 26.982\n",
+    "    \"Al\": 26.982,\n",
+    "    \"Si\": 28.085,\n",
+    "    \"P\": 30.974,\n",
+    "    \"S\": 32.06,\n",
+    "    \"Cl\": 35.45,\n",
+    "    \"Ar\": 39.948\n",
     "}\n",
     "\n",
     "# constant definitions\n",
