_notebooks/2023-09-14-Stats_Calculation.ipynb

--- a/_notebooks/2023-09-14-Stats_Calculation.ipynb
+++ b/_notebooks/2023-09-14-Stats_Calculation.ipynb
@@ -9,11 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The least amount of money movies made in box office is: 369,345,583$\n",
-      "The most amount of money movies made in box office is: 2,320,250,281$\n",
-      "The Median of the amount of money movies made in box office is: 701,404,294.0$\n",
-      "The Average amount of money movies made in box office is: 814,269,158.6$\n",
-      "The Standard Deviation of the amount of money movies made in box office is: 486,049,002.6574319$\n"
+      "The least amount of money movies made in box office is: $369,345,583\n",
+      "The most amount of money movies made in box office is: $2,320,250,281\n",
+      "The Median of the amount of money movies made in box office is: $701,404,294.0\n",
+      "The Average amount of money movies made in box office is: $814,269,158.6\n",
+      "The Standard Deviation of the amount of money movies made in box office is: $486,049,002.6574319\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
     "test = []\n",
     "# removing dollar symbol for formatting\n",
     "char = '$'\n",
-    "# makes a request for the website \n",
+    "# makes a request for the website\n",
     "moviePage = requests.get(url)\n",
     "# parses for all the content from web page\n",
     "soup = BeautifulSoup(moviePage.content, 'html.parser')\n",
@@ -62,8 +62,8 @@
     "minimum = ('{:,}'.format(n_num[0]))\n",
     "maximum = ('{:,}'.format(n_num[-1]))\n",
     "\n",
-    "print(\"The least amount of money movies made in box office is: \" + str(minimum)+ \"$\")\n",
-    "print(\"The most amount of money movies made in box office is: \" + str(maximum)+ \"$\")\n",
+    "print(\"The least amount of money movies made in box office is: \" + \"$\" + str(minimum))\n",
+    "print(\"The most amount of money movies made in box office is: \" + \"$\" + str(maximum))\n",
     "\n",
     "#calculating median\n",
     "n = len(n_num)\n",
@@ -75,7 +75,7 @@
     "    median = ('{:,}'.format((median1 + median2)/2))\n",
     "else:\n",
     "    median = ('{:,}'.format(n_num[n//2]))\n",
-    "print(\"The Median of the amount of money movies made in box office is: \" + str(median)+ \"$\")\n",
+    "print(\"The Median of the amount of money movies made in box office is: \" + \"$\" + str(median))\n",
     "\n",
     "#calculating mean\n",
     "n = len(n_num)\n",
@@ -83,7 +83,7 @@
     "get_sum = sum(n_num)\n",
     "mean = ('{:,}'.format(get_sum / n))\n",
     " \n",
-    "print(\"The Average amount of money movies made in box office is: \" + str(mean)+ \"$\")\n",
+    "print(\"The Average amount of money movies made in box office is: \" + \"$\" + str(mean))\n",
     "\n",
     "#calculating standard deviation\n",
     "n = len(n_num)\n",
@@ -94,7 +94,7 @@
     "variance = sum([((x - mean) ** 2) for x in n_num]) / n\n",
     "sd = ('{:,}'.format(variance ** 0.5))\n",
     "\n",
-    "print(\"The Standard Deviation of the amount of money movies made in box office is: \" + str(sd) + \"$\")"
+    "print(\"The Standard Deviation of the amount of money movies made in box office is: \" + \"$\" + str(sd))"
    ]
   }
  ],
