--- a/_posts/2023-10-2-ppPlan.md
+++ b/_posts/2023-10-2-ppPlan.md
@@ -3,8 +3,16 @@ toc: false
 comments: true
 layout: hack
 title: Passion Project Plan
-description: Plan 1 - 
+description: Plan 1 - Dark Souls; create terminal based boss fight
 type: plans
 courses: { compsci: {week: 4} }
 ---
 
+Create frontend and backend repos
+Get API set up between frontend and backend
+
+## Frontend
+- 
+
+## Backend
+- 
