--- a/_posts/2023-10-2-ppPlan.md
+++ b/_posts/2023-10-2-ppPlan.md
@@ -9,7 +9,7 @@ courses: { compsci: {week: 4} }
 ---
 
 Create frontend and backend repos
-Get API set up between frontend and backend
+Get API set up between frontend and backend (Devops)
 
 ## Frontend
 - 
