--- a/_notebooks/2023-10-03-titlescreen.ipynb
+++ b/_notebooks/2023-10-03-titlescreen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,10 @@
        "            blinkTextCursor 500ms\n",
        "        steps(44) infinite normal;\n",
        "    }\n",
+       "    #show title\n",
+       "    {\n",
+       "        text-align: center;\n",
+       "    }\n",
        "    #paragraph\n",
        "    {\n",
        "        display:none;\n",
@@ -70,7 +74,15 @@
        "        Hi! Welcome to Terminal Souls!\n",
        "    </p>\n",
        "</div>\n",
+       "<header>\n",
+       "    <button class=\"button\" id=\"showtitle\" onclick=\"title()\">Open Terminal Souls</button>\n",
        "\n",
+       "    <script>\n",
+       "        function title(){\n",
+       "\n",
+       "        }\n",
+       "    </script>\n",
+       "</header>\n",
        "<div class=\"titleScreen\">\n",
        "    <pre>\n",
        "    ████████╗███████╗██████╗ ███╗   ███╗██╗███╗   ██╗ █████╗ ██╗         ███████╗ ██████╗ ██╗   ██╗██╗     ███████╗\n",
@@ -80,18 +92,22 @@
        "       ██║   ███████╗██║  ██║██║ ╚═╝ ██║██║██║ ╚████║██║  ██║███████╗    ███████║╚██████╔╝╚██████╔╝███████╗███████║\n",
        "       ╚═╝   ╚══════╝╚═╝  ╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝╚══════╝    ╚══════╝ ╚═════╝  ╚═════╝ ╚══════╝╚══════╝\n",
        "    </pre>\n",
+       "    \n",
+       "\n",
+       "    \n",
        "    <div>\n",
        "        <button class=\"button\" onclick=\"changeParagraph()\">\n",
        "            Start\n",
        "        </button>\n",
        "    </div>\n",
+       "    \n",
        "    <button class=\"button\" id=\"abtTGame\" onclick=\"showParagraph()\">\n",
-       "        About this Nonexistent Game\n",
+       "        About\n",
        "    </button>\n",
        "    \n",
        "    <div id=\"paragraph\">\n",
        "        <p>\n",
-       "                This is a recreation of one of my favorite games to play, Dark Souls. A brutally hard game that is extremely fun to play, with over 100 hours invested in this game I am excited to recreate parts of it in this project.\n",
+       "                This is a recreation of Dark Souls. A brutally hard game that is extremely fun to play, with over 100 hours invested in this game I am excited to recreate parts of it in this project.\n",
        "            Check out some videos of people having lots of fun with this game:\n",
        "                <a href=\"https://www.youtube.com/watch?v=5SaW0oKTisk&t=52s\">People having jolly good fun with Dark Souls 1</a>\n",
        "            If you are having trouble with the game:\n",
@@ -163,6 +179,10 @@
     "            blinkTextCursor 500ms\n",
     "        steps(44) infinite normal;\n",
     "    }\n",
+    "    #show title\n",
+    "    {\n",
+    "        text-align: center;\n",
+    "    }\n",
     "    #paragraph\n",
     "    {\n",
     "        display:none;\n",
@@ -190,7 +210,15 @@
     "        Hi! Welcome to Terminal Souls!\n",
     "    </p>\n",
     "</div>\n",
+    "<div>\n",
+    "    <button class=\"button\" id=\"showtitle\" onclick=\"title()\">Open Terminal Souls</button>\n",
     "\n",
+    "    <script>\n",
+    "        function title(){\n",
+    "\n",
+    "        }\n",
+    "    </script>\n",
+    "</div>\n",
     "<div class=\"titleScreen\">\n",
     "    <pre>\n",
     "    ████████╗███████╗██████╗ ███╗   ███╗██╗███╗   ██╗ █████╗ ██╗         ███████╗ ██████╗ ██╗   ██╗██╗     ███████╗\n",
@@ -200,18 +228,20 @@
     "       ██║   ███████╗██║  ██║██║ ╚═╝ ██║██║██║ ╚████║██║  ██║███████╗    ███████║╚██████╔╝╚██████╔╝███████╗███████║\n",
     "       ╚═╝   ╚══════╝╚═╝  ╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝╚══════╝    ╚══════╝ ╚═════╝  ╚═════╝ ╚══════╝╚══════╝\n",
     "    </pre>\n",
+    "    \n",
     "    <div>\n",
     "        <button class=\"button\" onclick=\"changeParagraph()\">\n",
     "            Start\n",
     "        </button>\n",
     "    </div>\n",
+    "    \n",
     "    <button class=\"button\" id=\"abtTGame\" onclick=\"showParagraph()\">\n",
-    "        About this Nonexistent Game\n",
+    "        About\n",
     "    </button>\n",
     "    \n",
     "    <div id=\"paragraph\">\n",
     "        <p>\n",
-    "                This is a recreation of one of my favorite games to play, Dark Souls. A brutally hard game that is extremely fun to play, with over 100 hours invested in this game I am excited to recreate parts of it in this project.\n",
+    "                This is a recreation of Dark Souls. A brutally hard game that is extremely fun to play, with over 100 hours invested in this game I am excited to recreate parts of it in this project.\n",
     "            Check out some videos of people having lots of fun with this game:\n",
     "                <a href=\"https://www.youtube.com/watch?v=5SaW0oKTisk&t=52s\">People having jolly good fun with Dark Souls 1</a>\n",
     "            If you are having trouble with the game:\n",
