--- a/_notebooks/2023-10-03-titlescreen.ipynb
+++ b/_notebooks/2023-10-03-titlescreen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,10 @@
        "    .titleScreen\n",
        "    {\n",
        "        text-align:center;\n",
+       "    }\n",
+       "    #titleScreen\n",
+       "    {\n",
+       "        display:none\n",
        "    }\n",
        "    .button {\n",
        "        background-color: transparent;\n",
@@ -43,7 +47,7 @@
        "            blinkTextCursor 500ms\n",
        "        steps(44) infinite normal;\n",
        "    }\n",
-       "    #show title\n",
+       "    .showTitle\n",
        "    {\n",
        "        text-align: center;\n",
        "    }\n",
@@ -74,16 +78,12 @@
        "        Hi! Welcome to Terminal Souls!\n",
        "    </p>\n",
        "</div>\n",
-       "<div>\n",
+       "\n",
+       "<div class=\"showTitle\">\n",
        "    <button class=\"button\" id=\"showtitle\" onclick=\"title()\">Open Terminal Souls</button>\n",
-       "\n",
-       "    <script>\n",
-       "        function title(){\n",
-       "\n",
-       "        }\n",
-       "    </script>\n",
        "</div>\n",
-       "<div class=\"titleScreen\">\n",
+       "\n",
+       "<div class=\"titleScreen\" id=\"titleScreen\">\n",
        "    <pre>\n",
        "    ████████╗███████╗██████╗ ███╗   ███╗██╗███╗   ██╗ █████╗ ██╗         ███████╗ ██████╗ ██╗   ██╗██╗     ███████╗\n",
        "    ╚══██╔══╝██╔════╝██╔══██╗████╗ ████║██║████╗  ██║██╔══██╗██║         ██╔════╝██╔═══██╗██║   ██║██║     ██╔════╝\n",
@@ -119,6 +119,7 @@
        "\n",
        "<script>\n",
        "    var div = document.getElementById(\"paragraph\");\n",
+       "    var div = document.getElementById(\"titleScreen\");\n",
        "    function showParagraph()\n",
        "    {\n",
        "        document.getElementById(\"startParagraph\").style.display = \"none\";\n",
@@ -129,6 +130,9 @@
        "        \n",
        "        document.getElementById('paragraph').style.display=\"none\";\n",
        "        document.getElementById('startParagraph').style.display=\"block\";\n",
+       "    }\n",
+       "    function title(){\n",
+       "        document.getElementById('titleScreen').style.display=\"block\";\n",
        "    }\n",
        "</script>\n"
       ],
@@ -150,6 +154,10 @@
     "    .titleScreen\n",
     "    {\n",
     "        text-align:center;\n",
+    "    }\n",
+    "    #titleScreen\n",
+    "    {\n",
+    "        display:none\n",
     "    }\n",
     "    .button {\n",
     "        background-color: transparent;\n",
@@ -177,7 +185,7 @@
     "            blinkTextCursor 500ms\n",
     "        steps(44) infinite normal;\n",
     "    }\n",
-    "    #show title\n",
+    "    .showTitle\n",
     "    {\n",
     "        text-align: center;\n",
     "    }\n",
@@ -208,16 +216,12 @@
     "        Hi! Welcome to Terminal Souls!\n",
     "    </p>\n",
     "</div>\n",
-    "<div>\n",
+    "\n",
+    "<div class=\"showTitle\">\n",
     "    <button class=\"button\" id=\"showtitle\" onclick=\"title()\">Open Terminal Souls</button>\n",
-    "\n",
-    "    <script>\n",
-    "        function title(){\n",
-    "\n",
-    "        }\n",
-    "    </script>\n",
     "</div>\n",
-    "<div class=\"titleScreen\">\n",
+    "\n",
+    "<div class=\"titleScreen\" id=\"titleScreen\">\n",
     "    <pre>\n",
     "    ████████╗███████╗██████╗ ███╗   ███╗██╗███╗   ██╗ █████╗ ██╗         ███████╗ ██████╗ ██╗   ██╗██╗     ███████╗\n",
     "    ╚══██╔══╝██╔════╝██╔══██╗████╗ ████║██║████╗  ██║██╔══██╗██║         ██╔════╝██╔═══██╗██║   ██║██║     ██╔════╝\n",
@@ -253,6 +257,7 @@
     "\n",
     "<script>\n",
     "    var div = document.getElementById(\"paragraph\");\n",
+    "    var div = document.getElementById(\"titleScreen\");\n",
     "    function showParagraph()\n",
     "    {\n",
     "        document.getElementById(\"startParagraph\").style.display = \"none\";\n",
@@ -263,6 +268,9 @@
     "        \n",
     "        document.getElementById('paragraph').style.display=\"none\";\n",
     "        document.getElementById('startParagraph').style.display=\"block\";\n",
+    "    }\n",
+    "    function title(){\n",
+    "        document.getElementById('titleScreen').style.display=\"block\";\n",
     "    }\n",
     "</script>"
    ]
@@ -284,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
