--- a/_notebooks/2023-10-03-titlescreen.ipynb
+++ b/_notebooks/2023-10-03-titlescreen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,9 @@
        "    }\n",
        "    #titleScreen\n",
        "    {\n",
-       "        display:none\n",
+       "        display:none;\n",
+       "        font-family: \"Garamond\", Times, serif;\n",
+       "        text-align: center;\n",
        "    }\n",
        "    .button {\n",
        "        background-color: transparent;\n",
@@ -79,8 +81,8 @@
        "    </p>\n",
        "</div>\n",
        "\n",
-       "<div class=\"showTitle\">\n",
-       "    <button class=\"button\" id=\"showtitle\" onclick=\"title()\">Open Terminal Souls</button>\n",
+       "<div class=\"showTitle\" id=\"showTitle\">\n",
+       "    <button class=\"button\" onclick=\"title()\">Open Terminal Souls</button>\n",
        "</div>\n",
        "\n",
        "<div class=\"titleScreen\" id=\"titleScreen\">\n",
@@ -119,7 +121,7 @@
        "\n",
        "<script>\n",
        "    var div = document.getElementById(\"paragraph\");\n",
-       "    var div = document.getElementById(\"titleScreen\");\n",
+       "   \n",
        "    function showParagraph()\n",
        "    {\n",
        "        document.getElementById(\"startParagraph\").style.display = \"none\";\n",
@@ -127,12 +129,13 @@
        "    }\n",
        "    function changeParagraph()\n",
        "    {\n",
-       "        \n",
-       "        document.getElementById('paragraph').style.display=\"none\";\n",
-       "        document.getElementById('startParagraph').style.display=\"block\";\n",
+       "        document.getElementById(\"paragraph\").style.display=\"none\";\n",
+       "        document.getElementById(\"startParagraph\").style.display=\"block\";\n",
        "    }\n",
-       "    function title(){\n",
-       "        document.getElementById('titleScreen').style.display=\"block\";\n",
+       "    function title()\n",
+       "    {\n",
+       "        document.getElementById(\"titleScreen\").style.display=\"block\";\n",
+       "        document.getElementById(\"showTitle\").style.display=\"none\";\n",
        "    }\n",
        "</script>\n"
       ],
@@ -157,7 +160,9 @@
     "    }\n",
     "    #titleScreen\n",
     "    {\n",
-    "        display:none\n",
+    "        display:none;\n",
+    "        font-family: \"Garamond\", Times, serif;\n",
+    "        text-align: center;\n",
     "    }\n",
     "    .button {\n",
     "        background-color: transparent;\n",
@@ -217,8 +222,8 @@
     "    </p>\n",
     "</div>\n",
     "\n",
-    "<div class=\"showTitle\">\n",
-    "    <button class=\"button\" id=\"showtitle\" onclick=\"title()\">Open Terminal Souls</button>\n",
+    "<div class=\"showTitle\" id=\"showTitle\">\n",
+    "    <button class=\"button\" onclick=\"title()\">Open Terminal Souls</button>\n",
     "</div>\n",
     "\n",
     "<div class=\"titleScreen\" id=\"titleScreen\">\n",
@@ -257,7 +262,7 @@
     "\n",
     "<script>\n",
     "    var div = document.getElementById(\"paragraph\");\n",
-    "    var div = document.getElementById(\"titleScreen\");\n",
+    "   \n",
     "    function showParagraph()\n",
     "    {\n",
     "        document.getElementById(\"startParagraph\").style.display = \"none\";\n",
@@ -265,12 +270,13 @@
     "    }\n",
     "    function changeParagraph()\n",
     "    {\n",
-    "        \n",
-    "        document.getElementById('paragraph').style.display=\"none\";\n",
-    "        document.getElementById('startParagraph').style.display=\"block\";\n",
+    "        document.getElementById(\"paragraph\").style.display=\"none\";\n",
+    "        document.getElementById(\"startParagraph\").style.display=\"block\";\n",
     "    }\n",
-    "    function title(){\n",
-    "        document.getElementById('titleScreen').style.display=\"block\";\n",
+    "    function title()\n",
+    "    {\n",
+    "        document.getElementById(\"titleScreen\").style.display=\"block\";\n",
+    "        document.getElementById(\"showTitle\").style.display=\"none\";\n",
     "    }\n",
     "</script>"
    ]
