--- a/_notebooks/2023-10-03-titlescreen.ipynb
+++ b/_notebooks/2023-10-03-titlescreen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "        Hi! Welcome to Terminal Souls!\n",
        "    </p>\n",
        "</div>\n",
-       "<header>\n",
+       "<div>\n",
        "    <button class=\"button\" id=\"showtitle\" onclick=\"title()\">Open Terminal Souls</button>\n",
        "\n",
        "    <script>\n",
@@ -82,7 +82,7 @@
        "\n",
        "        }\n",
        "    </script>\n",
-       "</header>\n",
+       "</div>\n",
        "<div class=\"titleScreen\">\n",
        "    <pre>\n",
        "    ████████╗███████╗██████╗ ███╗   ███╗██╗███╗   ██╗ █████╗ ██╗         ███████╗ ██████╗ ██╗   ██╗██╗     ███████╗\n",
@@ -92,8 +92,6 @@
        "       ██║   ███████╗██║  ██║██║ ╚═╝ ██║██║██║ ╚████║██║  ██║███████╗    ███████║╚██████╔╝╚██████╔╝███████╗███████║\n",
        "       ╚═╝   ╚══════╝╚═╝  ╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝╚══════╝    ╚══════╝ ╚═════╝  ╚═════╝ ╚══════╝╚══════╝\n",
        "    </pre>\n",
-       "    \n",
-       "\n",
        "    \n",
        "    <div>\n",
        "        <button class=\"button\" onclick=\"changeParagraph()\">\n",
@@ -128,9 +126,9 @@
        "    }\n",
        "    function changeParagraph()\n",
        "    {\n",
-       "        div.innerHTML = <p>Read the first line. There is nothing else developed because Matthew has procracinated this assignment for too long. </p>\n",
-       "        # document.getElementById('paragraph').style.display=\"none\";\n",
-       "        # document.getElementById('startParagraph').style.display=\"block\";\n",
+       "        \n",
+       "        document.getElementById('paragraph').style.display=\"none\";\n",
+       "        document.getElementById('startParagraph').style.display=\"block\";\n",
        "    }\n",
        "</script>\n"
       ],
@@ -262,9 +260,9 @@
     "    }\n",
     "    function changeParagraph()\n",
     "    {\n",
-    "        div.innerHTML = <p>Read the first line. There is nothing else developed because Matthew has procracinated this assignment for too long. </p>\n",
-    "        # document.getElementById('paragraph').style.display=\"none\";\n",
-    "        # document.getElementById('startParagraph').style.display=\"block\";\n",
+    "        \n",
+    "        document.getElementById('paragraph').style.display=\"none\";\n",
+    "        document.getElementById('startParagraph').style.display=\"block\";\n",
     "    }\n",
     "</script>"
    ]
@@ -286,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0rc1"
   },
   "orig_nbformat": 4
  },
