--- a/_notebooks/2023-10-5-ppPlan.ipynb
+++ b/_notebooks/2023-10-5-ppPlan.ipynb
@@ -52,9 +52,37 @@
     "- Boss should have a variety of skills to attack you with\n",
     "- First tutorial area of dark souls\n",
     "\n",
-    "# Overview of screens\n",
-    "<img src=\"/ramjiJarmi/images/ppScreens.png\">\n",
+    "# Overview of screens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"/ramjiJarmi/images/ppScreens.jpg\">\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
     "\n",
+    "<img src=\"/ramjiJarmi/images/ppScreens.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Prerequisites\n",
     "\n",
     "## Frontend\n",
@@ -67,8 +95,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
