--- a/_posts/2023-10-09-Daily_Log8.md
+++ b/_posts/2023-10-09-Daily_Log8.md
@@ -1,7 +1,7 @@
 ---
 toc: false
 comments: true
-layout: hack
+layout: post
 title: Week 8 Log
 description: Work on passion project - Terminal Souls
 type: hacks
