--- a/_posts/2023-10-02-2023-Dailiy_Log7.md
+++ b/_posts/2023-10-02-2023-Dailiy_Log7.md
@@ -15,6 +15,7 @@ Monday:
     - Dark Souls recreation
         - Directories = different rooms?
         - What elements are we going to include?
+        - Brain write
     - Create file and write plan (ppPlan.md)
     - [Passion Project Plan](https://app.milanote.com/1QJKb518a2sF1n/frontend-backend-deployment)
 Tuesday:
