--- a/_posts/2023-10-09-Daily_Log8.md
+++ b/_posts/2023-10-09-Daily_Log8.md
@@ -11,8 +11,8 @@ courses: { compsci: {week: 8} }
 Monday:
 - Team meet
     - Discuss what we have so far
-    - Fromulate new ideas (and maybe scrap others)
-    - 
+    - Formulate new ideas (and maybe scrap others)
+    - Ask questions and provide feedback
 - Continue working on project
 Tuesday:
 - In class: not much --> student lessons
