--- a/_posts/2023-10-02-2023-Dailiy_Log7.md
+++ b/_posts/2023-10-02-2023-Dailiy_Log7.md
@@ -4,7 +4,7 @@ comments: true
 layout: hack
 title: Week 7 Log
 description: Begin passion project - Terminal Souls
-type: hacks
+type: plans
 courses: { compsci: {week: 7} }
 ---
 
@@ -18,6 +18,7 @@ Monday:
         - Brain write
     - Create file and write plan (ppPlan.md)
     - [Passion Project Plan](https://app.milanote.com/1QJKb518a2sF1n/frontend-backend-deployment)
+
 Tuesday:
 - Set up AWS and make sure that deployment is working
 - Split up work for each role
@@ -25,12 +26,15 @@ Tuesday:
     - Backend: data, character classes, ability to "cd", etc.
 - Begin working on separate parts
     - Ask for help or feedback
+
 Wednesday:
 - In class: not much --> student lessons
-- Continue working on projecr
+- Continue working on project
+
 Thursday: 
 - In class: not much --> student lessons
 - Continue working on project
+
 Friday/Weekend:
 - Continue working on project
 - Record video for Frontend, Backend, Deployment, Ideation assignment
