--- a/_notebooks/2023-10-5-ppPlan.ipynb
+++ b/_notebooks/2023-10-5-ppPlan.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: false\n",
+    "toc: true\n",
     "comments: true\n",
     "layout: post\n",
     "title: Passion Project Plan\n",
@@ -24,32 +24,35 @@
     "\n",
     "## Initial Concepts\n",
     "\n",
-    "**Isabelle(Scrum Master):**\n",
+    "**Isabelle (Scrum Master):**\n",
     "- Should have a character selection screen\n",
-    "- When player dies the image should turn gray\n",
-    "- Have pixel art in the game to make visuals more interesting\n",
-    "- First boss of dark souls\n",
+    "- When player dies the image should turn gray, implement grayscale here\n",
+    "- Maybe pixel art in the game to make visuals more interesting\n",
+    "- Use the first boss of dark souls for visuals and various images\n",
     "\n",
     "**Arthur:**\n",
-    "- Store user data/stats in database\n",
+    "- Store user data/stats in database, define models\n",
+    "- Look into REST API and maybe data compression as well\n",
     "- Should save a checkpoint that the user \n",
-    "- Show a picture of your character in the UI \n",
+    "- Show a picture of your character in the UI to include images\n",
     "\n",
     "**Rayane:**\n",
-    "- Have an image displayed to the user that switches whenever they do something\n",
+    "- Have an image displayed to the user that switches whenever they do something or click a button\n",
     "- Design a very cool looking title screen\n",
     "- Transition from venturing to turn based combat\n",
     "- A database to store the user's data so they can come back to it\n",
     "\n",
     "**Jason:**\n",
-    "- Store boss's data and hp\n",
-    "- Turn based Combat\n",
-    "- Add class-unique skills to do damage\n",
+    "- Store boss's data/stats in database, define functions\n",
+    "- Look into REST API and data compression\n",
+    "- Add class-unique skills to do damage, figure out scaling\n",
+    "- Plan how the turn-based combat will work\n",
     "\n",
     "**Matthew:**\n",
     "- Be able to \"cd\" into other areas\n",
-    "- Create character classes(e.g paladin, knight)\n",
-    "- Boss should have a variety of skills to attack you with\n",
+    "- Create character classes (e.g paladin, knight)\n",
+    "- Aid with frontend design, title screens, and basically make everything look pretty\n",
+    "- Create boss attacks, skills, scaling, etc.\n",
     "- First tutorial area of dark souls\n",
     "\n",
     "# Overview of screens"
@@ -76,21 +79,63 @@
    "source": [
     "%%html\n",
     "\n",
-    "<img src=\"/ramjiJarmi/images/ppScreens.jpg\">"
+    "<img src=\"/ramjiJarmi/images/ppScreens2.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prerequisites\n",
+    "## Description of screens\n",
+    "> Menu Screen\n",
+    "- This is the first screen the user will see and it is modeled after the actual Dark Souls title screen\n",
+    "- Will try to make as aesthetic as possible\n",
+    "- We plan on having a Start button the user can press to move on to the next screen\n",
+    "\n",
+    "> Character Creation\n",
+    "- This is the second screen the user will see\n",
+    "- It is designed to take in user inputs for name, gender, and class\n",
+    "- These inputs can be used in future screens to personalize each user's experience\n",
+    "- The class will be picked from various presets, each with their own health, attack, resistance, power, and name. These data sets will be placed in the backend for the frontend to get.\n",
+    "\n",
+    "> Gameplay\n",
+    "- This is the third screen the user will see\n",
+    "- The bulk of the frontend work will likely be here\n",
+    "- An image of the boss with its HP bar, an image of your character and your HP values, and the list of actions will all be displayed\n",
+    "- After the user enters an action, the backend takes over and will run damage calculations and update the frontend with new values to display in HP bar, a new image, and possibly more\n",
+    "\n",
+    "> Lose\n",
+    "- If the user loses against the boss, this screen will be displayed\n",
+    "- The plan is to turn each image grayscale to indicate the loss, add text or image with the iconic Dark Souls death font, and output a message to the user notifying them of the loss\n",
+    "\n",
+    "> Win\n",
+    "- If the user wins against the boss, this screen will be displayed\n",
+    "- As we are purposely scaling the boss to be incredibly difficult, this screen is of less importance. We plan on outputting a message to the user notifying them of their victory, potentially grayscaling the boss image, and potentially adding more images like confetti.\n",
     "\n",
     "## Frontend\n",
+    "- Title screen and other screens\n",
+    "- Buttons\n",
+    "- Images of boss\n",
+    "- Grayscale\n",
+    "- Text output\n",
+    "\n",
     "## Backend\n",
+    "- Data sets\n",
+    "- Figure out how API works and try to set up REST API with get, post, put, delete (requests, class, model, testing, etc.) with jokes API as an example\n",
+    "- Function calculation\n",
+    "- Balancing\n",
     "\n",
     "# Game Features\n",
+    "- Turn based combat\n",
+    "- Various images of boss and grayscaling\n",
+    "- Use character stats and functions to get data to communicate between frontend and backend with API\n",
+    "- Various screens\n",
     "\n",
-    "# Data"
+    "# Data\n",
+    "- Split by character or boss\n",
+    "- Define each character/boss with a health value, attack, resistance, and power unique to each class\n",
+    "- Create function to caluclate damage based off of attack, resistance, and power\n",
+    "- Have frontend get data from these presets"
    ]
   }
  ],
