--- a/_notebooks/2023-10-5-ppPlan.ipynb
+++ b/_notebooks/2023-10-5-ppPlan.ipynb
@@ -60,13 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"/ramjiJarmi/images/ppScreens.jpg\">\n"
+       "\n",
+       "<img src=\"/ramjiJarmi/images/ppScreens2.png\">\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -79,7 +80,7 @@
    "source": [
     "%%html\n",
     "\n",
-    "<img src=\"/ramjiJarmi/images/ppScreens2.jpg\">"
+    "<img src=\"/ramjiJarmi/images/ppScreens2.png\">"
    ]
   },
   {
@@ -155,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
