changed to tangible

--- a/_posts/2023-10-4-souls.md
+++ b/_posts/2023-10-4-souls.md
@@ -1,8 +1,8 @@
 ---
 comments: true
 layout: souls
-title: Soulslike
+title: SoulsScreens
 description: souls
 courses: { compsci: {week: 7} }
-type: hacks
+type: tangibles
 ---
