--- a/_posts/2023-10-11-turnTest.md
+++ b/_posts/2023-10-11-turnTest.md
@@ -42,17 +42,17 @@ type: tangibles
     </div>
 </div>
 
-
 <script>
-    var currentAction=0;
+  var currentAction=0;
     window.addEventListener("keypress", function(keyPressed){
         if(keyPressed.key === "Enter")
         {
-            action = document.getElementById(`${currentAction}`);
+            action = document.getElementById(`${currentAction}`)
             action.textContent = action.replace('>','');
             currentAction++;
             action = document.getElementById(`${currentAction}`);
             action.textContent = '>' + action.textContent;
         }
     })
+
 </script>
