--- a/_posts/2023-10-13-turnTest2.md
+++ b/_posts/2023-10-13-turnTest2.md
@@ -63,6 +63,16 @@ type: tangibles
             }
         });
 
+        window.addEventListener("keypress", function(keyPressed){
+            if(keyPressed.key === "Enter") {
+            action = document.getElementById(`${currentAction}`)
+            action.textContent = action.replace('>','');
+            currentAction++;
+            action = document.getElementById(`${currentAction}`);
+            action.textContent = '>' + action.textContent;
+        }
+        });
+
         // Initialize the selection on page load
         updateSelection();
 </script>
