--- a/_notebooks/2023-09-28-bossfightupdated.ipynb
+++ b/_notebooks/2023-09-28-bossfightupdated.ipynb
@@ -108,7 +108,6 @@
        "        }\n",
        "    }, 1000);\n",
        "\n",
-       "    // Initialization\n",
        "    window.onload = function() {\n",
        "        updateTimerDisplay();\n",
        "    }\n",
@@ -247,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.0rc1"
   },
   "orig_nbformat": 4
  },
