--- a/_notebooks/2023-09-28-bossfightupdated.ipynb
+++ b/_notebooks/2023-09-28-bossfightupdated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -246,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
