--- a/_notebooks/2023-09-28-bossfightupdated.ipynb
+++ b/_notebooks/2023-09-28-bossfightupdated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -24,7 +24,7 @@
        "            height: 20px;\n",
        "            background-color: red;\n",
        "        }\n",
-       "\n",
+       "        \n",
        "        #currentHealth {\n",
        "            height: 20px;\n",
        "            background-color: green;\n",
@@ -41,7 +41,7 @@
        "        <div id=\"currentHealth\" style=\"width:100%\"></div>\n",
        "    </div>\n",
        "\n",
-       "    <div id=\"timer\">Time remaining: 30 seconds</div>\n",
+       "    <div id=\"timer\">Time remaining: 10 seconds</div>\n",
        "\n",
        "    <div id=\"buttons\">\n",
        "        <button type=\"button\" onclick=\"attack1()\">Attack1</button>\n",
@@ -142,7 +142,7 @@
     "            height: 20px;\n",
     "            background-color: red;\n",
     "        }\n",
-    "\n",
+    "        \n",
     "        #currentHealth {\n",
     "            height: 20px;\n",
     "            background-color: green;\n",
@@ -159,7 +159,7 @@
     "        <div id=\"currentHealth\" style=\"width:100%\"></div>\n",
     "    </div>\n",
     "\n",
-    "    <div id=\"timer\">Time remaining: 30 seconds</div>\n",
+    "    <div id=\"timer\">Time remaining: 10 seconds</div>\n",
     "\n",
     "    <div id=\"buttons\">\n",
     "        <button type=\"button\" onclick=\"attack1()\">Attack1</button>\n",
@@ -236,7 +236,7 @@
     "    </script>\n",
     "</body>\n",
     "\n",
-    "</html>"
+    "</html>\n"
    ]
   }
  ],
