--- a/_notebooks/2023-10-02-bossFight.ipynb
+++ b/_notebooks/2023-10-02-bossFight.ipynb
@@ -129,7 +129,7 @@
     "<head>\n",
     "    <meta charset=\"UTF-8\">\n",
     "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-    "    <title>Boss Fight</title>\n",
+    "    <title>Boss ight</title>\n",
     "    <style>\n",
     "        #healthbar {\n",
     "            width: 100%;\n",
