--- a/_posts/2023-10-02-2023-Daily_Log7.md
+++ b/_posts/2023-10-02-2023-Daily_Log7.md
@@ -2,10 +2,10 @@
 toc: false
 comments: true
 layout: hack
-title: Week 7 Log
+title: PP Week 1 Log
 description: Begin passion project - Terminal Souls
 type: plans
-courses: { compsci: {week: 7} }
+courses: { compsci: {week: 1} }
 ---
 
 ## Ideation Week 7 (10/2 - 10/6)
