--- a/_posts/2023-10-13-turnTest2.md
+++ b/_posts/2023-10-13-turnTest2.md
@@ -1,10 +1,10 @@
 ---
 comments: true
 layout: posts
-title: TurnTest2
-description: souls
-courses: { compsci: {week: 7} }
-type: tangibles
+title: Turn Test (actions?)
+description: Figuring out user actions and how to format them
+courses: { compsci: {week: 1} }
+type: hacks
 ---
 <style>
         #0 {
