--- a/_posts/2023-10-4-souls.md
+++ b/_posts/2023-10-4-souls.md
@@ -1,8 +1,8 @@
 ---
 comments: true
 layout: souls
-title: SoulsScreens
+title: Terminal Souls
 description: souls
-courses: { compsci: {week: 7} }
+courses: { compsci: {week: 5} }
 type: tangibles
 ---
