--- a/_notebooks/2023-10-5-ppPlan.ipynb
+++ b/_notebooks/2023-10-5-ppPlan.ipynb
@@ -10,7 +10,7 @@
     "layout: post\n",
     "title: Passion Project Plan\n",
     "description: Passion Project\n",
-    "type: hacks\n",
+    "type: plans\n",
     "courses: { compsci: {week: 0} }\n",
     "---"
    ]
